<resources>
    <string name="app_name">the Feed Tree.</string>
    <string name="title_activity_home">the Feed Tree.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pref_previously_started">com.newsapp.preferences</string>

    <string-array name="sources_list">
        <item>ABC News</item>
        <item>BBC News</item>
        <item>BBC Sports</item>
        <item>Bild</item>
        <item>Bloomberg</item>
        <item>Business Insider</item>
        <item>Buzzfeed</item>
        <item>CNBC</item>
        <item>CNN</item>
        <item>Engadget</item>
        <item>ESPN</item>
        <item>Fox News</item>
        <item>IGN</item>
        <item>MASHABLE</item>
        <item>MTV News</item>
        <item>National Geographic</item>
        <item>News Scientist</item>
        <item>Recode</item>
        <item>Reddit</item>
        <item>TechCrunch</item>
        <item>TechRadar</item>
        <item>The Hindu</item>
        <item>The Times of India</item>
        <item>The Verge</item>
        <item>Time</item>
        <item>Wired</item>
    </string-array>

    <string-array name="sources_list_values">
        <item>abc-news</item>
        <item>bbc-news</item>
        <item>bbc-sports</item>
        <item>bild</item>
        <item>bloomberg</item>
        <item>business Insider</item>
        <item>buzzfeed</item>
        <item>cnbc</item>
        <item>cnn</item>
        <item>engadget</item>
        <item>espn</item>
        <item>fox-news</item>
        <item>ign</item>
        <item>mashable</item>
        <item>mtv-news</item>
        <item>national-geographic</item>
        <item>news-scientist</item>
        <item>recode</item>
        <item>reddit</item>
        <item>techcrunch</item>
        <item>techradar</item>
        <item>the-hindu</item>
        <item>the-times-of-india</item>
        <item>the-verge</item>
        <item>time</item>
        <item>wired</item>
    </string-array>
    <string name="menu_home">Home</string>
    <string name="nav_rating">Rate Us</string>
    <string name="menu_business">Business</string>
    <string name="menu_share">Share</string>
    <string name="menu_technolgy">Technolgy</string>
    <string name="menu_sports">sports</string>
    <string name="menu_entertainment">Entertainment</string>
    <string name="menu_science">Science</string>
    <string name="top_stories">Top Stories</string>
    <string name="menu_health">Health</string>
    <string name="my_stories">My Stories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
